old/k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
spec:
  ingressClassName: nginx
  rules:
    - host: metrics-api.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics
                port:
                  number: 5001
    - host: mobilitysoft-api.home.adammihajlovic.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mobilitysoft
                port:
                  number: 5002
 tls:
   - hosts:
       - metrics-api.home.adammihajlovic.ca
       - mobilitysoft-api.home.adammihajlovic.ca
     secretName: wildcard-home
